Bug 165748 - Incorrect orientation shown when re-opening page style settings after changing orientation twice
Summary: Incorrect orientation shown when re-opening page style settings after changin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-03-14 22:19 UTC by Nam
Modified: 2025-03-25 07:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of switched page orientation (97.95 KB, image/jpeg)
2025-03-15 05:56 UTC, Juan Q.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nam 2025-03-14 22:19:41 UTC
Overview:
After changing the orientation to landscape and back to portrait, the landscape radio-box is checked instead of portrait when re-opening page style settings.

Steps to reproduce:
1. Open document in portrait mode or create new document.
2. Go to: Format > Page Style > Page
3. Set orientation to "Landscape". Click "Apply".
4. Set orientation back to "Portrait". Click "OK".
5. Again, go to: Format > Page Style > Page

Actual results:
The orientation radio box is marked as "Landscape" whereas the document is in portrait mode.

Expected results:
The orientation radio box is marked as "Portrait" and the document is in portrait mode.

Bug observed in:
Version: 25.2.1.2 (X86_64) / LibreOffice Community
Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 6.3.0.4 (x64)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

Additional info:
"Apply" is not and option when changing orientation in 3.3.0, so bug cannot appear. Bug is not present in 5.0.0, so this could be a possible regression?
Comment 1 Juan Q. 2025-03-15 05:56:42 UTC
Created attachment 199818 [details]
screenshot of switched page orientation
Comment 2 Juan Q. 2025-03-15 06:02:27 UTC
Hello Nam,

Thank you for reporting the bug. I can confirm that the bug is present in latest stable windows version and master.

Version: 25.2.1.2 (X86_64) / LibreOffice Community
Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 501e5a7db75e265ace4b1efbe9b604d97b8e7b1e
CPU threads: 12; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

It seems to be an issue when you click OK instead of apply, the orientation radio buttons switch.

Changing status to NEW.
Comment 3 Saburo 2025-03-21 09:56:09 UTC
First bad commit
author	Oliver Specht <oliver.specht@cib.de>	2015-09-10 11:01:26 +0200
commit a212ef2b6ebadb22a9abf6d042aa2b5fd9ac1cf0

tdf#93901: apply handling in style/edit dialog improved
introduced SfxTabPage::ChangesApplied() to enable resetting values
to their initial state while editing styles
Comment 4 Buovjaga 2025-03-21 10:04:55 UTC
(In reply to Saburo from comment #3)
> First bad commit
> author	Oliver Specht <oliver.specht@cib.de>	2015-09-10 11:01:26 +0200
> commit a212ef2b6ebadb22a9abf6d042aa2b5fd9ac1cf0
> 
> tdf#93901: apply handling in style/edit dialog improved
> introduced SfxTabPage::ChangesApplied() to enable resetting values
> to their initial state while editing styles

Thanks. It's quite an old change, but let's show it to Oliver.
Comment 5 Commit Notification 2025-03-24 18:14:35 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf52841f339ed13221cac8f7cd9e4e93faccde17

tdf#165748 re-save state of portrait/landscape buttons on apply

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.