tdf#165748 re-save state of portrait/landscape buttons on apply

Change-Id: I7e525d41ce7b46c5086e3ef2112a74485cd46793
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183273
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
Tested-by: Jenkins